--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "3.4.4",
+  "version": "3.4.5-beta.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -50,6 +50,7 @@
     "@mui/lab": "5.0.0-alpha.119",
     "@mui/material": "5.11.8",
     "@mui/styles": "5.11.7",
+    "@types/jest": "^29.5.4",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@unfoldingword/eslint-config": "1.3.0",
     "babel-loader": "^8.1.0",
@@ -72,7 +73,7 @@
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "gitea-react-toolkit": "1.11.0",
-    "jest": "^26.6.3",
+    "jest": "^29.6.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -82,7 +83,7 @@
     "style-loader": "^2.0.0",
     "tc-ui-toolkit": "^5.3.3",
     "translation-helps-rcl": "^3.4.2",
-    "ts-jest": "^29.0.5",
+    "ts-jest": "^29.1.1",
     "use-deep-compare-effect": "1.8.1",
     "usfm-js": "3.4.2",
     "webpack": "^4.44.2",
@@ -98,7 +99,7 @@
     "source-map-loader": "^1.1.3",
     "styled-components": "^5.2.1",
     "ts-loader": "^8.0.12",
-    "typescript": "^4.1.3",
+    "typescript": "^5.2.2",
     "uw-quote-helpers": "0.0.1-beta.15"
   }
 }
