--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "3.4.13",
+  "version": "3.4.13-beta.38",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -93,9 +93,9 @@
     "word-aligner-rcl": "0.9.2"
   },
   "dependencies": {
+    "@react-hookz/deep-equal": "^1.0.4",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "deep-equal": "^2.0.5",
     "diff": "^5.1.0",
     "lodash": "^4.17.21",
     "react-docgen-typescript": "^1.20.5",
