--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-testing-library": "^6.1.0",
     "fs-extra": "^11.1.1",
     "gitea-react-toolkit": "1.11.0",
     "jest": "^29.6.4",
