--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "3.4.12",
+  "version": "3.4.13",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -35,11 +35,12 @@
     "word-aligner-rcl": "^0.9.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-flow": "^7.12.1",
-    "@babel/preset-react": "^7.12.1",
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.2",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-flow": "^7.22.15",
+    "@babel/preset-react": "^7.22.15",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@jest/globals": "^29.4.2",
@@ -93,9 +94,9 @@
     "word-aligner-rcl": "0.9.2"
   },
   "dependencies": {
+    "@react-hookz/deep-equal": "^1.0.4",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "deep-equal": "^2.0.5",
     "diff": "^5.1.0",
     "lodash": "^4.17.21",
     "react-docgen-typescript": "^1.20.5",
