--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "3.4.16",
+  "version": "3.4.17",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -28,7 +28,7 @@
     "react": "^17.x",
     "react-dom": "^17.x",
     "react-icons": "^4.8.0",
-    "scripture-resources-rcl": "^5.2.0",
+    "scripture-resources-rcl": "^5.5.8",
     "tc-ui-toolkit": "^5.3.3",
     "translation-helps-rcl": "^3.4.2",
     "word-aligner": "^1.0.0",
@@ -82,7 +82,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.8.0",
     "react-styleguidist": "11.2.0",
-    "scripture-resources-rcl": "^5.4.1",
+    "scripture-resources-rcl": "^5.5.8",
     "style-loader": "^2.0.0",
     "tc-ui-toolkit": "^5.3.3",
     "translation-helps-rcl": "^3.4.2",
@@ -103,7 +103,6 @@
     "source-map-loader": "^1.1.3",
     "styled-components": "^5.2.1",
     "ts-loader": "^8.0.12",
-    "typescript": "^5.2.2",
-    "uw-quote-helpers": "0.0.1-beta.15"
+    "typescript": "^5.2.2"
   }
 }
